Updated scss with brand colors. Correct sign-up link and app title

--- a/imports/client/stylesheets/components/_variables.scss
+++ b/imports/client/stylesheets/components/_variables.scss
@@ -1,24 +1,24 @@
-$alto: #dddddd;
+$concrete: #f2f2f2;
 $white: #ffffff;
 $black: #000000;
-$purple: #5b4681;
+$cerulean: #00aecc;
 
 // Spacing
 $space: 1.4rem;
 
 // Button
-$button-bg: $purple;
+$button-bg: $cerulean;
 $button-color: $white;
-$button-pill-color: $purple;
+$button-pill-color: $cerulean;
 
 // Font sizes
 $base-font-size: 1.6rem;
 
 // Form inputs
-$input-border: $alto;
+$input-border: $concrete;
 
 // Boxed view
-$boxed-view-overlay-bg: $alto;
+$boxed-view-overlay-bg: $concrete;
 $boxed-view-bg: $white;
 
 // Links
