Revert "Added PresentationView component"

--- a/imports/client/stylesheets/components/_variables.scss
+++ b/imports/client/stylesheets/components/_variables.scss
@@ -1,24 +1,24 @@
-$concrete: #f2f2f2;
+$alto: #dddddd;
 $white: #ffffff;
 $black: #000000;
-$cerulean: #00aecc;
+$purple: #5b4681;
 
 // Spacing
 $space: 1.4rem;
 
 // Button
-$button-bg: $cerulean;
+$button-bg: $purple;
 $button-color: $white;
-$button-pill-color: $cerulean;
+$button-pill-color: $purple;
 
 // Font sizes
 $base-font-size: 1.6rem;
 
 // Form inputs
-$input-border: $concrete;
+$input-border: $alto;
 
 // Boxed view
-$boxed-view-overlay-bg: $concrete;
+$boxed-view-overlay-bg: $alto;
 $boxed-view-bg: $white;
 
 // Links
