Change folder structure for sass

--- a/client/stylesheets/_main.scss
+++ b/client/stylesheets/_main.scss
@@ -1,4 +1,4 @@
-@import './components/variables';
-@import './components/base';
+@import './abstracts/variables';
+@import './base/base';
 @import './components/boxed-view';
 @import './components/buttons';
